# claude-loops-demo

./: .gitignore  DEMO_RUNBOOK.md  LOOP_INSTRUCTIONS.md  PROGRESS.md  README.md  TASK.md  clean-slate.sh  pyproject.toml  reset-demo.sh  verify.sh
_solutions/: test_aggregate_full.py  test_api.py  test_normalize_edges.py  test_parser.py  test_theater.py
outputs/: coverage-plan.md
src/: __init__.py  aggregate.py  api.py  normalize.py  parser.py  sentiment.py
tests/: test_aggregate.py  test_normalize.py  test_sentiment.py
